add new field in portfolio
